--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:16-alpine
@@ -31,6 +29,70 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+  migrate:
+    image: migrate/migrate:v4.17.1
+    container_name: payment_migrate
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./db/migrations:/migrations:ro
+    entrypoint: ["/bin/sh", "-c"]
+    command: >
+      "db='postgres://user:password@db:5432/payment_system?sslmode=disable';
+      attempts=0;
+      max_attempts=8;
+      while [ $$attempts -lt $$max_attempts ]; do
+        attempts=$$((attempts + 1));
+        output=$$(migrate -path /migrations -database \"$$db\" up 2>&1);
+        code=$$?;
+        echo \"$$output\";
+        if [ $$code -eq 0 ] || echo \"$$output\" | grep -q 'no change'; then
+          exit 0;
+        fi;
+        if echo \"$$output\" | grep -q 'Dirty database version'; then
+          version=$$(echo \"$$output\" | sed -n 's/.*version \\([0-9][0-9]*\\).*/\\1/p' | head -n1);
+          if [ -n \"$$version\" ]; then
+            echo \"Detected dirty migration version $$version; forcing clean state and retrying up ($$attempts/$$max_attempts)\";
+            migrate -path /migrations -database \"$$db\" force $$version;
+            continue;
+          fi;
+        fi;
+        exit $$code;
+      done;
+      echo 'migration recovery exceeded max attempts';
+      exit 1"
+    restart: "no"
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: payment_api
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
+    environment:
+      PORT: "8080"
+      DATABASE_URL: "postgres://user:password@db:5432/payment_system?sslmode=disable"
+      REDIS_URL: "redis://redis:6379/0"
+      JWT_SECRET: "dev-secret-change-me-please-rotate-2026"
+      WEBHOOK_HMAC_KEY: "dev-key-change-in-production"
+      WEBHOOK_SKIP_SIG: "false"
+      PAYOUT_POLL_INTERVAL: "10s"
+      PAYOUT_BATCH_SIZE: "10"
+      RECONCILIATION_INTERVAL: "24h"
+      PUBLIC_RATE_LIMIT_RPS: "10"
+      AUTH_RATE_LIMIT_RPS: "100"
+      IDEMPOTENCY_TTL: "24h"
+    ports:
+      - "8080:8080"
+    restart: unless-stopped
 
 volumes:
   postgres_data:
